--- a/app/static/locales/it.json
+++ b/app/static/locales/it.json
@@ -193,7 +193,7 @@
         "schein": "Certificato di immatricolazione Parte I",
         "brief": "Certificato di immatricolazione Parte II",
         "evb": "eVB per targa stagionale",
-        "idCopy": "Copia del documento d’identità",
+        "idCopy": "Copia del documento d'identità",
         "vollmacht": "Delega e mandato SEPA"
       },
       "customs": {
@@ -202,6 +202,247 @@
         "note": "A seconda del caso, ci sono diversi requisiti per le targhe doganali. Ti preghiamo di ",
         "link": "contattarci",
         "note2": "per una consulenza personalizzata sul tuo caso specifico."
+      }
+    }
+  },
+  "faq-nav": "FAQ",
+  "faq": {
+    "title": "Domande Frequenti (FAQ)",
+    "description": "Qui troverai le risposte alle domande più comuni sull'immatricolazione, il trasferimento e la radiazione dei veicoli. Il nostro servizio Express ti supporta in tutte le richieste in modo rapido e semplice.",
+    "question1": {
+      "title": "Cosa serve per immatricolare un'auto?",
+      "intro": "Per immatricolare un veicolo sono necessari i seguenti documenti:",
+      "doc1": "Certificato di immatricolazione (Zulassungsbescheinigung Teil I) e libretto di circolazione (Zulassungsbescheinigung Teil II)",
+      "doc2": "Documento d'identità o passaporto valido (per cittadini stranieri, anche copia del passaporto)",
+      "doc3": "Numero eVB (conferma elettronica dell'assicurazione) della tua assicurazione auto",
+      "doc4": "Mandato SEPA per la tassa automobilistica",
+      "doc5": "Se applicabile: certificato di revisione (HU) valido",
+      "doc6": "Se utilizzi il nostro servizio: procura e modulo d'ordine",
+      "closing": "Con il nostro servizio Express ci occupiamo dell'intero processo per te – velocemente, facilmente e senza tempi di attesa!"
+    },
+    "question2": {
+      "title": "Come funziona l'immatricolazione di un'auto?",
+      "intro": "L'immatricolazione del veicolo segue questi passaggi:",
+      "step1": {
+        "title": "Prepara i documenti:",
+        "text": "Raccogli tutti i documenti necessari (certificato di immatricolazione, libretto, documento d'identità, numero eVB, mandato SEPA)"
+      },
+      "step2": {
+        "title": "Ottieni l'assicurazione:",
+        "text": "Contatta la tua assicurazione auto e ottieni il numero eVB"
+      },
+      "step3": {
+        "title": "Visita l'ufficio immatricolazioni:",
+        "text": "Recati presso l'ufficio competente o utilizza il nostro servizio Express"
+      },
+      "step4": {
+        "title": "Completa l'immatricolazione:",
+        "text": "I documenti vengono verificati, la tassa viene calcolata e il veicolo viene registrato nel sistema"
+      },
+      "step5": {
+        "title": "Ricevi le targhe:",
+        "text": "Ottieni le targhe e il nuovo certificato di immatricolazione"
+      },
+      "closing": {
+        "bold": "Con il nostro servizio Express:",
+        "text": "Ci consegni i documenti e ci occupiamo di tutto per te nel più breve tempo possibile – in tutta Italia e senza appuntamento!"
+      }
+    },
+    "question3": {
+      "title": "Qual è la differenza tra immatricolazione e reimmatricolazione?",
+      "intro": "La differenza tra immatricolazione e reimmatricolazione:",
+      "registration": {
+        "title": "Immatricolazione (prima immatricolazione o reimmatricolazione):",
+        "point1": "Necessaria quando un veicolo viene immatricolato per la prima volta o era stato radiato",
+        "point2": "Il veicolo riceve targhe completamente nuove e viene registrato ex novo nel sistema",
+        "point3": "Necessaria dopo l'acquisto di un veicolo radiato o per auto nuove"
+      },
+      "reregistration": {
+        "title": "Reimmatricolazione:",
+        "point1": "Necessaria in caso di trasloco in un diverso distretto di immatricolazione (fuori provincia)",
+        "point2": "O in caso di cambio di proprietà (vendita/acquisto di un veicolo immatricolato)",
+        "point3": "Il veicolo viene trasferito a un nuovo proprietario o a un nuovo indirizzo",
+        "point4": "Per traslochi all'interno della stessa provincia, è necessario solo un cambio di indirizzo"
+      },
+      "closing": "Il nostro servizio ti supporta in entrambi i processi in modo rapido e professionale!"
+    },
+    "question4": {
+      "title": "Quanto costa immatricolare un'auto con le targhe?",
+      "intro": "I costi per l'immatricolazione del veicolo con targhe si compongono di diverse voci:",
+      "fees": {
+        "title": "Tasse amministrative:",
+        "registration": "Immatricolazione del veicolo: circa 26-30 euro",
+        "certificate": "Rilascio del certificato di immatricolazione: circa 11 euro",
+        "reservation": "Prenotazione targhe (opzionale): circa 2,60-12,80 euro"
+      },
+      "plates": {
+        "title": "Targhe:",
+        "standard": "Targhe standard: circa 20-30 euro (entrambe le targhe)",
+        "custom": "Targhe personalizzate: costo aggiuntivo circa 10-13 euro"
+      },
+      "additional": {
+        "title": "Costi aggiuntivi:",
+        "sticker": "Bollino anti-inquinamento: circa 5-10 euro",
+        "insurance": "Assicurazione auto (varia in base al veicolo e alla copertura)"
+      },
+      "total": {
+        "title": "Totale:",
+        "text": "I costi di immatricolazione variano tipicamente tra 60-100 euro, a seconda dei requisiti individuali."
+      },
+      "closing": "Con il nostro servizio Express ottieni un pacchetto completo trasparente che include la gestione professionale!"
+    },
+    "question5": {
+      "title": "Cosa viene prima, le targhe o l'immatricolazione?",
+      "principle": {
+        "title": "In linea di principio:",
+        "text": "L'immatricolazione avviene per prima, poi si ricevono le targhe."
+      },
+      "process": {
+        "title": "Il processo abituale:",
+        "step1": "Ti rechi all'ufficio immatricolazioni con tutti i documenti necessari",
+        "step2": "L'ufficio verifica i documenti e completa l'immatricolazione",
+        "step3": "Dopo l'immatricolazione avvenuta con successo, ricevi il sigillo e il timbro di immatricolazione",
+        "step4": "Con questi documenti puoi far stampare le targhe (presso di noi o presso un servizio targhe)"
+      },
+      "alternative": {
+        "title": "Alternativa moderna:",
+        "text": "Puoi far stampare le targhe in anticipo presso un servizio targhe e farle timbrare direttamente durante l'immatricolazione. Questo fa risparmiare tempo!"
+      },
+      "service": {
+        "title": "Con il nostro servizio Express:",
+        "text": "Ci occupiamo di tutto – dall'immatricolazione alle targhe finite e timbrate. Ricevi il tuo veicolo pronto per la strada!"
+      }
+    },
+    "question6": {
+      "title": "È consentito guidare fino all'ufficio immatricolazioni senza targhe?",
+      "answer": "No, guidare senza targhe generalmente non è consentito e può essere multato.",
+      "alternatives": {
+        "title": "Eccezioni e alternative legali:",
+        "shortterm": {
+          "title": "Targhe temporanee (targhe di 5 giorni):",
+          "text": "Specificamente per test drive e trasferimenti all'ufficio immatricolazioni. Valide per 5 giorni."
+        },
+        "export": {
+          "title": "Targhe di esportazione (targhe doganali):",
+          "text": "Per esportare veicoli all'estero"
+        },
+        "red": {
+          "title": "Targhe rosse:",
+          "text": "Solo per concessionari e officine per test drive e trasferimenti"
+        },
+        "trailer": {
+          "title": "Rimorchio/trasporto:",
+          "text": "Puoi portare il veicolo all'ufficio immatricolazioni su un rimorchio o con un carro attrezzi"
+        }
+      },
+      "recommendation": {
+        "title": "Raccomandazione:",
+        "text": "Utilizza una targa temporanea o il nostro servizio Express. Ritiriamo il tuo veicolo e lo riportiamo immatricolato con tutte le targhe – legale e sicuro!"
+      }
+    },
+    "question7": {
+      "title": "Quali documenti servono per immatricolare un veicolo?",
+      "intro": "Per immatricolare un veicolo sono necessari i seguenti documenti:",
+      "required": {
+        "title": "Documenti obbligatori:",
+        "schein": {
+          "title": "Certificato di immatricolazione:",
+          "text": "Zulassungsbescheinigung Teil I (se disponibile)"
+        },
+        "brief": {
+          "title": "Libretto di circolazione:",
+          "text": "Zulassungsbescheinigung Teil II"
+        },
+        "id": {
+          "title": "Documento d'identità o passaporto:",
+          "text": "Documento d'identificazione valido"
+        },
+        "evb": {
+          "title": "Numero eVB:",
+          "text": "Conferma elettronica dell'assicurazione dalla tua assicurazione auto"
+        },
+        "sepa": {
+          "title": "Mandato SEPA:",
+          "text": "Per l'addebito della tassa automobilistica"
+        }
+      },
+      "additional": {
+        "title": "Inoltre, se applicabile:",
+        "hu": "Certificato di revisione (HU) valido, se disponibile",
+        "foreign": "Per cittadini stranieri: copia del passaporto",
+        "vollmacht": "Quando rappresentati da terzi: procura dal proprietario del veicolo",
+        "company": "Per veicoli aziendali: visura camerale o estratto del registro delle imprese"
+      },
+      "closing": {
+        "text": "Puoi trovare una lista completa sulla nostra ",
+        "link": "pagina checklist",
+        "service": "Il nostro servizio Express ti aiuta a raccogliere tutti i documenti!"
+      }
+    },
+    "question8": {
+      "title": "Si possono acquistare le targhe prima dell'immatricolazione?",
+      "answer": "Sì, puoi acquistare e far produrre le targhe prima dell'immatricolazione.",
+      "howto": {
+        "title": "Come funziona:",
+        "reserve": {
+          "title": "Prenota le targhe (facoltativo):",
+          "text": "Presso l'ufficio immatricolazioni o online, puoi prenotare la targa desiderata"
+        },
+        "stamp": {
+          "title": "Fai produrre le targhe:",
+          "text": "Con la conferma della prenotazione o il numero di targa desiderato, puoi recarti presso un servizio targhe e farle produrre"
+        },
+        "bring": {
+          "title": "Portale all'immatricolazione:",
+          "text": "Porta le targhe non timbrate all'ufficio immatricolazioni"
+        },
+        "seal": {
+          "title": "Timbratura:",
+          "text": "Dopo l'immatricolazione avvenuta con successo, i sigilli vengono applicati sulle targhe"
+        }
+      },
+      "advantage": {
+        "title": "Vantaggio:",
+        "text": "Risparmi tempo perché non devi andare al servizio targhe dopo l'immatricolazione. Le targhe sono subito pronte per l'uso!"
+      },
+      "important": {
+        "title": "Importante:",
+        "text": "Le targhe sono valide solo dopo l'immatricolazione ufficiale e la timbratura. Non puoi guidare con esse prima!"
+      },
+      "closing": "Il nostro servizio Express offre pacchetti completi che includono la produzione e la timbratura delle targhe – tutto da un'unica fonte!"
+    },
+    "question9": {
+      "title": "Cosa serve per radiare un veicolo presso l'ufficio immatricolazioni?",
+      "intro": "Per radiare (dismettere) il tuo veicolo hai bisogno di:",
+      "required": {
+        "title": "Documenti necessari:",
+        "schein": {
+          "title": "Certificato di immatricolazione:",
+          "text": "Zulassungsbescheinigung Teil I"
+        },
+        "plates": {
+          "title": "Entrambe le targhe:",
+          "text": "Le targhe anteriore e posteriore devono essere restituite"
+        },
+        "id": {
+          "title": "Documento d'identità o passaporto:",
+          "text": "Documento d'identificazione valido del proprietario del veicolo"
+        },
+        "vollmacht": {
+          "title": "Procura:",
+          "text": "Se fai effettuare la radiazione da un'altra persona"
+        }
+      },
+      "notes": {
+        "title": "Note importanti:",
+        "brief": "Il libretto di circolazione (Zulassungsbescheinigung Teil II) non è necessario per la radiazione",
+        "costs": "La radiazione è gratuita o costa solo pochi euro (circa 5-10 euro a seconda dell'ufficio)",
+        "insurance": "Dopo la radiazione devi informare la tua assicurazione auto",
+        "traffic": "Il veicolo non può più essere utilizzato nel traffico pubblico dopo la radiazione"
+      },
+      "service": {
+        "title": "Il nostro servizio Express:",
+        "text": "Ci occupiamo della radiazione completa per te – velocemente, facilmente e in tutta Italia. Contattaci oggi stesso!"
       }
     }
   },
